Crash when pressing "V" in UV/Image editor #37464

Closed
opened 2013-11-15 04:42:26 +01:00 by Leon Cheung · 10 comments
Member

System Information
WIn7 Pro 64bit | FX2700M

Blender Version
Broken: Blender 2.69 r61240
Worked: Blender Not found yet.

Short description of error
When hitting V in UV Editor, Blender crashed.

Exact steps for others to reproduce the error
Just open the file, keep the mouse cusor within UV Editor area, press V.
V.blend

FYI, Btw, I didn't find a relevant project tag for this issue, any suggestions for me to choose one for such issue in the future? Thanks!

**System Information** WIn7 Pro 64bit | FX2700M **Blender Version** Broken: Blender 2.69 r61240 Worked: Blender Not found yet. **Short description of error** When hitting V in UV Editor, Blender crashed. **Exact steps for others to reproduce the error** Just open the file, keep the mouse cusor within UV Editor area, press V. [V.blend](https://archive.blender.org/developer/F27381/V.blend) FYI, Btw, I didn't find a relevant project tag for this issue, any suggestions for me to choose one for such issue in the future? Thanks!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Confirmed on OS X 10.9. Crashes when pressing V.

Confirmed on OS X 10.9. Crashes when pressing V.

Added subscriber: @nucandrei

Added subscriber: @nucandrei

Confirmed on Windows 7. Only when using your file.
Blender reported the following problem in console: Memoryblock free: attempt to free illegal pointer.
Log file content: # Blender 2.69 (sub 0), Revision: 60995 bpy.ops.object.editmode_toggle() # Operator

Confirmed on Windows 7. Only when using your file. Blender reported the following problem in console: **Memoryblock free: attempt to free illegal pointer.** Log file content: *# Blender 2.69 (sub 0), Revision: 60995 bpy.ops.object.editmode_toggle() # Operator*

This issue was referenced by blender/blender-addons-contrib@95d3286c65

This issue was referenced by blender/blender-addons-contrib@95d3286c65e034d9801c2623e81ef92a06e6cc8c

This issue was referenced by 95d3286c65

This issue was referenced by 95d3286c65e034d9801c2623e81ef92a06e6cc8c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 95d3286c65.

Closed by commit 95d3286c65.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37464
No description provided.