Fix T37464: Crash when pressing "V" in UV/Image editor

Also fix for missing draw-handler free.
Delay activating until we know 'stitch_init' succeeds.